@@ -1,16 +1,15 @@
 Changes
-MANIFEST
-MANIFEST.SKIP
-Makefile.PL
-README
-TESTED
-LICENSE
-inc/ILCPPConfig/OldCompilerGuess.pm
 inc/ILCPPConfig/CompilerGuess.pm
+inc/ILCPPConfig/OldCompilerGuess.pm
 lib/Inline/CPP.pm
 lib/Inline/CPP.pod
-lib/Inline/CPP/Parser/RecDescent.pm
 lib/Inline/CPP/Config.pm.in
+lib/Inline/CPP/Parser/RecDescent.pm
+LICENSE
+Makefile.PL
+MANIFEST
+MANIFEST.SKIP
+README
 t/00load_prereqs.t
 t/01fn_cans.t
 t/02basic.t
@@ -50,12 +49,14 @@ t/grammar/16varlst.t
 t/grammar/17memberarray.t
 t/grammar/18namespace.t
 t/grammar/19multidimarray.t
+t/grammar/typemap.09purevt
 t/namespace/01empty_ns_is_main.t
 t/namespace/02main_ns_is_main.t
 t/namespace/03baz_ns_is_baz.t
 t/namespace/04invoke_from_non_main.t
 t/namespace/05invalid_ns.t
 t/namespace/06inherit.t
+TESTED
 xt/05pod.t
 xt/07perlcritic.t
 xt/09pod_coverage.t
