@@ -1,20 +1,37 @@
 use strict;
 use warnings;
 use Test::More;
+use FindBin;
 
 # this is needed to avoid false passes if was done first without 'info'
-use Inline CPP => config => force_build => 1, clean_after_build => 0;
+use Inline CPP => config => force_build => 1, clean_after_build => 0,
+  typemaps => "$FindBin::Bin/typemap.09purevt",
+  ;
 
 # Test pure virtual functions (abstract classes).
 use Inline CPP => <<'END';
+
+#ifdef __INLINE_CPP_STANDARD_HEADERS
+#include <string>
+#else
+#include <string.h>
+#endif
+
+#ifdef __INLINE_CPP_NAMESPACE_STD
+using namespace std;
+#endif
 
 class Abstract {
   public:
         virtual char *text() = 0;
         virtual int greet(char *name) {
-        printf("# Hello, %s.\n", name);
-        return 17;
-    }
+            printf("# Hello, %s.\n", name);
+            return 17;
+        }
+        virtual string greet2() {
+            string retval = "yo";
+            return retval;
+        }
 };
 
 class Impl : public Abstract {
@@ -23,8 +40,6 @@ class Impl : public Abstract {
     ~Impl() {}
     virtual char *text() { return "Hello from Impl!"; }
 };
-
-
 END
 
 my $o = new_ok( 'Impl' );
@@ -36,6 +51,11 @@ is(
 is(
     $o->greet('Neil'), 17,
     "Inherited member function from parent."
+);
+
+is(
+    $o->greet2, "yo",
+    "Inherited string member function from parent."
 );
 
 my $p;
