@@ -1,6 +1,8 @@
 Revision history for Perl extension Inline::CPP.
 
 0.76
+  - show how to use typemaps - fix #36
+  - doc tweak - fix #46
   - Better handling of PRD <1.90 - fix #47
   - just use EU::CppG, not roll own
   - make I::CPP data structure right for I::C::info - fix #45
